--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "axios": "^0.21.4",
+    "js-cookie": "^3.0.1",
+    "mongoose": "^6.0.8",
     "next": "11.1.2",
+    "next-connect": "^0.10.2",
+    "notistack": "^2.0.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-material-ui-carousel": "^2.3.5"
   },
   "devDependencies": {
     "eslint": "7.32.0",
