adding mongodb uri

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb://localhost/next-bejamas
+MONGODB_URI="mongodb+srv://next-bjamas:4199@next-bejamas.40u9o.mongodb.net/next-bejamas?retryWrites=true&w=majority"
