--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-MONGODB_URI="mongodb+srv://next-bjamas:4199@next-bejamas.40u9o.mongodb.net/next-bejamas?retryWrites=true&w=majority"
+MONGODB_URI=mongodb://localhost/next-bejamas
+
+
